# otel

./: compose.yaml  locustfile.py  pyproject.toml
app/: main.py
otel/: __init__.py
otel/logs/: exemplo.py  main.py  teste_loguru.py
otel/metricas/: __init__.py  main.py  metricas.json
otel/tracing/: __init__.py  exemplo.py  main.py  tracing.json
